--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
       <input id="movie" type="text">
       <button class="btn-success" id="movie-title">Submit</button>
     <!-- </form> -->
-    <div id="results">
+    <div>
+      <ul id="results">
+       
+      </ul>
       
     </div>
-    </div>
-  </body>
-</html>
