add image API call function

--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
   
   <body>
 <p>Type in a movie you would like to know about. Then hit the heart to save and watch later!</p>
-    <!-- <form id="movie-selection"> -->
+
       <label for="movie">Enter a movie name below:</label>
       <input id="movie" type="text">
-      <button class="btn-success" id="movie-title">Submit</button>
-    <!-- </form> -->
-    <div>
-      <ul id="results">
-       
-      </ul>
-      
-    </div>
+      <!-- ////----Movie Image----------------- -->
+      <div> 
+        <ul id="results-title"></ul>
+        <span id="results-img" style="display:inline;"><img src=""></span>
+        </div>
+      <button class="btn-success" id="movie-results">Submit</button>
+
+
