add Img function and place it in getElements function to display images for each movie

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
       <input id="movie" type="text">
       <!-- ////----Movie Image----------------- -->
       <div> 
-        <ul id="results-title"></ul>
-        <span id="results-img" style="display:inline;"><img src=""></span>
+        <ul id="results-title"><img src="" id="style"></ul>
+        <!-- <span id="results-img" style="display:inline;"></span> -->
         </div>
       <button class="btn-success" id="movie-results">Submit</button>
 
