--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,7 @@
       <input id="movie" type="text">
       <!-- ////----Movie Image----------------- -->
       <div> 
-        <ul id="results-title"><img src="" id="style"></ul>
-        <!-- <span id="results-img" style="display:inline;"></span> -->
-        </div>
+        <ul id="results-title"></ul>
+        <span id="results-img" style="display:inline;"></span>
+      </div>
       <button class="btn-success" id="movie-results">Submit</button>
-
-
