--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,12 @@
       <input id="movie" type="text">
       <button class="btn-success" id="movie-title">Submit</button>
     <!-- </form> -->
-
-    <div id="results" class="movieList">
-     
+    <div id="details">
+      <!-- <button type="button" id="favoriteMoveiList">Add Your Favorite Movie List</button> -->
     </div>
+    <div id="results" class="movieList"></div>
+
+    
 
     </div>
 
