add movie favorite list

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
       <input id="movie" type="text">
       <button class="btn-success" id="movie-title">Submit</button>
     <!-- </form> -->
-    <div id="details">
-      <!-- <button type="button" id="favoriteMoveiList">Add Your Favorite Movie List</button> -->
+    <div>
+      <a id="showFMovieList" href="#">Favorite movie List</a>
     </div>
+    <div id="details"></div>
+    <div id="fMovieList"></div>
     <div id="results" class="movieList"></div>
 
     
