--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Forum|Single+Day&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Favorites</title>
   </head>
@@ -13,11 +14,13 @@
       </div>
 
     <p>Type in a movie you would like to know about. Then hit the heart to save and watch later!</p>
-    <!-- <form id="movie-selection"> -->
+    
       <label for="movie"results>Enter a movie name below:</label>
       <input id="movie" type="text">
       <button class="btn-success" id="movie-title">Submit</button>
-    <!-- </form> -->
+      <div class="search-msg">
+        <p>About <span></span> results</p>
+      </div>
     <div>
       <a id="showFMovieList" href="#">Favorite movie List</a>
     </div>
