--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
 
 
     
-=======
-<html>
+
+<!-- <html>
 
 <head>
   <meta charset="UTF-8">
@@ -66,8 +66,8 @@
 
     <label for="movie">Enter a movie name below:</label>
     <input id="movie" type="text">
-    <!-- ////----Movie Image----------------- -->
-    <button class="btn-success" id="movie-results">Submit</button>
+    <////----Movie Image----------------- -->
+    <!-- <button class="btn-success" id="movie-results">Submit</button>
     <div>
     <div class="search-msg">
       <p>About <span></span> results</p>
@@ -77,5 +77,5 @@
     </div>
 </body>
 
-</html>
+</html> --> 
 
