--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Bangers|Forum|Single+Day&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Favorites</title>
-  </head>
-  <body>
 
-    <div class="contanier-fluid">
-      <div class="jumbotron">
-        <h1>Movie Favorites</h1>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Forum|Single+Day&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Movie Favorites</title>
+</head>
+
+<body>
+
+  <div class="contanier-fluid">
+    <div class="jumbotron">
+      <h1>Movie Favorites</h1>
+    </div>
 
     <p>Type in a movie you would like to know about. Then hit the heart to save and watch later!</p>
-    
-      <label for="movie"results>Enter a movie name below:</label>
-      <input id="movie" type="text">
-      <button class="btn-success" id="movie-title">Submit</button>
-      <div class="search-msg">
-        <p>About <span></span> results</p>
-      </div>
+
+    <label for="movie" results>Enter a movie name below:</label>
+    <input id="movie" type="text">
+    <button class="btn-success" id="movie-title">Submit</button>
+    <!-- <div class="search-msg">
+      <p>About <span></span> results</p>
+    </div> -->
     <div>
       <a id="showFMovieList" href="#">Favorite movie List</a>
     </div>
     <div id="details"></div>
     <div id="fMovieList"></div>
     <div id="results" class="movieList"></div>
-   </div> 
-  </body>
+  </div>
+</body>
+
 </html>
 
 
